2010-07-05	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1600/testing
	* spfifo05/init.c, spfifo05/spfifo05.doc, spfifo05/spfifo05.scn,
	spfifo05/Makefile.am: New tests for pipe/fifo routines.
	* Makefile.am, configure.ac: Add new test.

2010-07-02	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1600/testing
	* spfifo04/init.c, spfifo04/spfifo04.doc, spfifo04/spfifo04.scn,
	spfifo04/Makefile.am: New files to improve coverage on fifo/pipe
	routines
	* Makefile.am, configure.ac: Add new test.

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp68/init.c: Add alignment to region_area. Fix spelling.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1573/cpukit
	* spsize/size.c: Add a per cpu data structure which contains the
	information required by RTEMS for each CPU core. This encapsulates
	information such as thread executing, heir, idle and dispatch needed.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp69/Makefile.am: Really needs spin.c

2010-06-26	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1592/testing
	* Makefile.am, configure.ac: Changes to incorporate sperror01,
	sperror02, sperror03
	* sperror01/init.c, sperror02/init.c: New tests to exercise
	rtems_error routine
	* sperror03/init.c: New test to exercise rtems_panic routine

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp69/Makefile.am, sp71/Makefile.am, spfifo02/Makefile.am: Tests do
	not need spin.c

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp70/Makefile.am: Tests do not need spin.c

2010-06-24	Bharath Suri <bharath.s.jois@gmail.com>

	* Makefile.am, configure.ac: Removed some fifo tests.
	* spfifo01/Makefile.am, spfifo01/init.c: Minor changes to avoid
	excessive new lines in the output.

	spfifo02/Makefile.am, spfifo02/init.c, spfifo02/spfifo02.doc,
	spfifo02/spfifo02.scn, spfifo03/Makefile.am: Merge from spfifo08.
	Also added a few more cases, mostly from spfifo04/init.c.
	* spfifo03/init.c, spfifo03/spfifo03.doc, spfifo03/spfifo03.scn: 