@@ -1,0 +1,2 @@
+Fatal error (rtems_termios_initialize cannot create semaphore) hit
+
